org.eclipse.scout.rt.ui.rap.theme.rayo.mobile/theme/scout.mobile.css
/* ... */
Composite.mobileFormFooter {
  background-image: gradient(linear, left top, left bottom, from(#ddebf4), to(#d4e1e7));
}
Composite.smartFieldActionBar {
  background-image: gradient(linear, left top, left bottom, from(#ddebf4), to(#d4e1e7));
}
CLabel {
  /* Top and bottom padding depend on logical grid row height. The text of the label should be aligned with the text of the field. */

  padding: 5px 3px;
}
Button.datechooser-dialog-last-year,
Button.datechooser-dialog-last-year:hover {
  background-image: url(theme/img/datetime/last-year_30x30.png);
}
Button.datechooser-dialog-last-month,
Button.datechooser-dialog-last-month:hover {
  background-image: url(theme/img/datetime/last-month_30x30.png);
}
Button.datechooser-dialog-next-year,
Button.datechooser-dialog-next-year:hover {
  background-image: url(theme/img/datetime/next-year_30x30.png);
}
Button.datechooser-dialog-next-month,
Button.datechooser-dialog-next-month:hover {
  background-image: url(theme/img/datetime/next-month_30x30.png);
}
Button[PUSH],
Button[TOGGLE],
Button[BORDER] {
  font: bold 12px Arial, Helvetica, sans-serif;
  background-image: gradient(linear, left top, left bottom, from(#53a4d3), to(#4890ba));
  border: 1px solid #3a7597;
}
Button[PUSH]:disabled,
Button[TOGGLE]:disabled {
  text-shadow: 0px 1px 0px #fff;
}
Button[PUSH]:hover {
  background-image: gradient(linear, left top, left bottom, from(#fe9915), to(#be7414));
  border: 1px solid #91560a;
}
Button-FocusIndicator[PUSH],
Button-FocusIndicator[TOGGLE] {
  background-color: transparent;
  background-image: none;
  border: 0px;
}
Button-FocusIndicator[CHECK] {
  background-color: transparent;
  background-image: none;
  border: 0px;
}
Button-FocusIndicator[RADIO] {
  background-color: transparent;
  background-image: none;
  border: 0px;
}
Composite.smartfield {
  padding: 0px;
}
Composite.smartfield-disabled {
  padding: 0px;
}
Composite.smartfield:hover {
  background-color: #fef9f1;
}
Label.smartfield {
  border-radius: 4px;
  background-image: none;
  background-color: transparent;
}
Label.smartfield:disabled {
  background-color: #f4f8fc;
}
Composite.smartfield_browse {
  background-image: url(theme/img/button/smartfield_browse.png);
}
Composite.smartfield_browse-disabled {
  background-image: url(theme/img/button/smartfield_browse_disabled.png);
}
Composite.datefield_icon {
  background-image: url(theme/img/button/datefield_date.png);
  border-radius: 5px;
  border: none;
}
Label.datefield {
  border-radius: 4px;
  background-image: none;
  background-color: transparent;
}
Label.datefield:disabled {
  background-color: #f4f8fc;
}
Composite.datefield:hover {
  background-color: #fef9f1;
}
Composite.datefield_icon-disabled {
  background-image: url(theme/img/button/datefield_date_disabled.png);
  border: none;
}
Composite.timefield:hover {
  background-color: #fef9f1;
}
Label.timefield {
  border-radius: 4px;
  background-image: none;
  background-color: transparent;
}
Label.timefield:disabled {
  background-color: #f4f8fc;
}
Composite.timefield_icon {
  background-image: url(theme/img/button/datefield_time.png);
  border-radius: 5px;
  border: none;
}
Composite.timefield_icon-disabled {
  background-image: url(theme/img/button/datefield_time_disabled.png);
  border: none;
}
ScrollBar {
  width: 0px;
}
Shell[BORDER] {
  box-shadow: 5px 5px 4px 0px #3f3f3f;
  animation: none;
}
Shell-DisplayOverlay {
  animation: none;
  background-image: none;
  background-color: #565656;
  opacity: 0.5;
}
Menu {
  color: white;
  font: bold 12px Arial, Helvetica, sans-serif;
  background-image: gradient(linear, left top, left bottom, from(#53a4d3), to(#4890ba));
  border: 1px solid #3a7597;
  border-radius: 5px;
}
MenuItem {
  color: white;
}
MenuItem:disabled {
  color: #33637f;
}
MenuItem:hover {
  background-image: gradient(linear, left top, left bottom, from(#fe9915), to(#be7414));
  color: white;
}
MenuItem-CheckIcon {
  background-image: url(theme/img/menu/checkbox-white.gif);
}
MenuItem-RadioIcon {
  background-image: url(theme/img/menu/radiobutton-white.gif);
}
MenuItem-CascadeIcon {
  background-image: url(theme/img/menu/arrow-white.gif);
}
Text {
  padding: 0px 6px;
}
Composite.form {
  background-color: #ebf4f8;
}
Shell.busy-dialog {
  border-radius: 3px;
  border: 1px solid #3a7597;
  background-color: #67a8ce;
}
Label.busy-dialog {
  color: white;
}
Label.outlineTableStatus {
  color: #2a5a76;
}
Label.tableStatus {
  color: #2a5a76;
}

